--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ malloclab/malloc/.vs/malloc/v15/ipch/AutoPCH/f6d99c6778ae9cec/MEMLIB.ipch
 malloclab/malloc/.vs/ProjectSettings.json
 malloclab/malloc/.vs/slnx.sqlite
 malloclab/malloc/.vs/VSWorkspaceState.json
+malloclab/malloc/.vs/malloc/v15/ipch/AutoPCH/fff7caa258a80b8/MM_IMPLICITFREELIST.ipch
